urSQLParser.java
// $ANTLR 3.5 /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g 2015-09-13 17:39:18

	package query_processor;
	import java.io.*;
	import java.util.Vector;
	import java.util.Collections;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class urSQLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ALL", "ALTER", "AS", "AVERAGE", 
		"BY", "CHAR", "CHARACTER", "COLON", "COMMENT", "CONSTRAINT", "COUNT", 
		"CREATE", "DATABASE", "DATABASES", "DATETIME", "DECIMAL", "DELETE", "DISPLAY", 
		"DROP", "EQUALS", "ESC_SEQ", "EXPONENT", "FLOAT", "FOR", "FOREIGN", "FROM", 
		"GET", "GREATER_EQUALS", "GREATER_THAN", "GROUP", "HEX_DIGIT", "ID", "INDEX", 
		"INSERT", "INT", "INTEGER", "INTO", "IS", "JOIN", "JSON", "KEY", "LEFT_PAR", 
		"LESS_EQUALS", "LESS_THAN", "LIKE", "LIST", "MAX", "MIN", "NEWLINE", "NOT", 
		"NULL", "OCTAL_ESC", "ON", "PRIMARY", "REFERENCES", "RIGHT_PAR", "SELECT", 
		"SET", "START", "STATUS", "STOP", "STRING", "TABLE", "UNICODE_ESC", "UPDATE", 
		"VALUES", "VARCHAR", "WHERE", "WS", "XML"
	};
	public static final int EOF=-1;
	public static final int ADD=4;
	public static final int ALL=5;
	public static final int ALTER=6;
	public static final int AS=7;
	public static final int AVERAGE=8;
	public static final int BY=9;
	public static final int CHAR=10;
	public static final int CHARACTER=11;
	public static final int COLON=12;
	public static final int COMMENT=13;
	public static final int CONSTRAINT=14;
	public static final int COUNT=15;
	public static final int CREATE=16;
	public static final int DATABASE=17;
	public static final int DATABASES=18;
	public static final int DATETIME=19;
	public static final int DECIMAL=20;
	public static final int DELETE=21;
	public static final int DISPLAY=22;
	public static final int DROP=23;
	public static final int EQUALS=24;
	public static final int ESC_SEQ=25;
	public static final int EXPONENT=26;
	public static final int FLOAT=27;
	public static final int FOR=28;
	public static final int FOREIGN=29;
	public static final int FROM=30;
	public static final int GET=31;
	public static final int GREATER_EQUALS=32;
	public static final int GREATER_THAN=33;
	public static final int GROUP=34;
	public static final int HEX_DIGIT=35;
	public static final int ID=36;
	public static final int INDEX=37;
	public static final int INSERT=38;
	public static final int INT=39;
	public static final int INTEGER=40;
	public static final int INTO=41;
	public static final int IS=42;
	public static final int JOIN=43;
	public static final int JSON=44;
	public static final int KEY=45;
	public static final int LEFT_PAR=46;
	public static final int LESS_EQUALS=47;
	public static final int LESS_THAN=48;
	public static final int LIKE=49;
	public static final int LIST=50;
	public static final int MAX=51;
	public static final int MIN=52;
	public static final int NEWLINE=53;
	public static final int NOT=54;
	public static final int NULL=55;
	public static final int OCTAL_ESC=56;
	public static final int ON=57;
	public static final int PRIMARY=58;
	public static final int REFERENCES=59;
	public static final int RIGHT_PAR=60;
	public static final int SELECT=61;
	public static final int SET=62;
	public static final int START=63;
	public static final int STATUS=64;
	public static final int STOP=65;
	public static final int STRING=66;
	public static final int TABLE=67;
	public static final int UNICODE_ESC=68;
	public static final int UPDATE=69;
	public static final int VALUES=70;
	public static final int VARCHAR=71;
	public static final int WHERE=72;
	public static final int WS=73;
	public static final int XML=74;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public urSQLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public urSQLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return urSQLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g"; }


		public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
			String hdr = getErrorHeader(e);
			String[] splt = hdr.split("\\s");
			String tmp = splt[1];
			char c = tmp.charAt(0);
			String lineNumber = "";
			lineNumber += Character.toString(c);
			c = tmp.charAt(1);
			if (!Character.toString(c).equals(":")) {
				lineNumber += Character.toString(c);
			}
			System.out.println("Error 42000: Syntax error or access rule violation in line " + lineNumber);
		}


	protected static class programa_scope {
		Vector<String> type_null;
		Vector<String> column;
		Vector<String> values;
		Vector<String> condition;
		Vector<String> select_columns;
		Vector<String> select_tables;
		Vector<String> select_group;
		Vector<Vector<String>> columns;
		String tmp;
	}
	protected Stack<programa_scope> programa_stack = new Stack<programa_scope>();


	// $ANTLR start "programa"
	// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:34:1: programa : ( clp_commands | ddl_commands | dml_commands );
	public final void programa() throws  {
		programa_stack.push(new programa_scope());

			programa_stack.peek().type_null = new Vector<String>();
			programa_stack.peek().column = new Vector<String>();
			programa_stack.peek().values = new Vector<String>();
			programa_stack.peek().condition = new Vector<String>();
			programa_stack.peek().select_columns = new Vector<String>();
			programa_stack.peek().select_tables = new Vector<String>();
			programa_stack.peek().select_group = new Vector<String>();
			programa_stack.peek().columns = new Vector<Vector<String>>();
			programa_stack.peek().tmp = "";

		try {
			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:59:2: ( clp_commands | ddl_commands | dml_commands )
			int alt1=3;
			switch ( input.LA(1) ) {
			case CREATE:
				{
				int LA1_1 = input.LA(2);
				if ( (LA1_1==DATABASE) ) {
					alt1=1;
				}
				else if ( (LA1_1==INDEX||LA1_1==TABLE) ) {
					alt1=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DROP:
				{
				int LA1_2 = input.LA(2);
				if ( (LA1_2==DATABASE) ) {
					alt1=1;
				}
				else if ( (LA1_2==TABLE) ) {
					alt1=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DISPLAY:
			case GET:
			case LIST:
			case START:
			case STOP:
				{
				alt1=1;
				}
				break;
			case EOF:
				{
				alt1=1;
				}
				break;
			case ALTER:
			case SET:
				{
				alt1=2;
				}
				break;
			case DELETE:
			case INSERT:
			case SELECT:
			case UPDATE:
				{
				alt1=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:59:4: clp_commands
					{
					pushFollow(FOLLOW_clp_commands_in_programa57);
					clp_commands();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:60:4: ddl_commands
					{
					pushFollow(FOLLOW_ddl_commands_in_programa62);
					ddl_commands();
					state._fsp--;

					}
					break;
				case 3 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:61:4: dml_commands
					{
					pushFollow(FOLLOW_dml_commands_in_programa67);
					dml_commands();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			programa_stack.pop();
		}
	}
	// $ANTLR end "programa"



	// $ANTLR start "dml_commands"
	// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:65:1: dml_commands : ( ( select | update | delete | insert ) ( clp_commands | ddl_commands | dml_commands ) |);
	public final void dml_commands() throws  {
		try {
			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:66:2: ( ( select | update | delete | insert ) ( clp_commands | ddl_commands | dml_commands ) |)
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==DELETE||LA4_0==INSERT||LA4_0==SELECT||LA4_0==UPDATE) ) {
				alt4=1;
			}
			else if ( (LA4_0==EOF) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:66:4: ( select | update | delete | insert ) ( clp_commands | ddl_commands | dml_commands )
					{
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:66:4: ( select | update | delete | insert )
					int alt2=4;
					switch ( input.LA(1) ) {
					case SELECT:
						{
						alt2=1;
						}
						break;
					case UPDATE:
						{
						alt2=2;
						}
						break;
					case DELETE:
						{
						alt2=3;
						}
						break;
					case INSERT:
						{
						alt2=4;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}
					switch (alt2) {
						case 1 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:66:6: select
							{
							pushFollow(FOLLOW_select_in_dml_commands84);
							select();
							state._fsp--;

							}
							break;
						case 2 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:67:4: update
							{
							pushFollow(FOLLOW_update_in_dml_commands89);
							update();
							state._fsp--;

							}
							break;
						case 3 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:68:4: delete
							{
							pushFollow(FOLLOW_delete_in_dml_commands94);
							delete();
							state._fsp--;

							}
							break;
						case 4 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:69:4: insert
							{
							pushFollow(FOLLOW_insert_in_dml_commands99);
							insert();
							state._fsp--;

							}
							break;

					}

					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:69:13: ( clp_commands | ddl_commands | dml_commands )
					int alt3=3;
					switch ( input.LA(1) ) {
					case CREATE:
						{
						int LA3_1 = input.LA(2);
						if ( (LA3_1==DATABASE) ) {
							alt3=1;
						}
						else if ( (LA3_1==INDEX||LA3_1==TABLE) ) {
							alt3=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 3, 1, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

						}
						break;
					case DROP:
						{
						int LA3_2 = input.LA(2);
						if ( (LA3_2==DATABASE) ) {
							alt3=1;
						}
						else if ( (LA3_2==TABLE) ) {
							alt3=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 3, 2, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

						}
						break;
					case DISPLAY:
					case GET:
					case LIST:
					case START:
					case STOP:
						{
						alt3=1;
						}
						break;
					case EOF:
						{
						alt3=1;
						}
						break;
					case ALTER:
					case SET:
						{
						alt3=2;
						}
						break;
					case DELETE:
					case INSERT:
					case SELECT:
					case UPDATE:
						{
						alt3=3;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 3, 0, input);
						throw nvae;
					}
					switch (alt3) {
						case 1 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:69:15: clp_commands
							{
							pushFollow(FOLLOW_clp_commands_in_dml_commands105);
							clp_commands();
							state._fsp--;

							}
							break;
						case 2 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:70:4: ddl_commands
							{
							pushFollow(FOLLOW_ddl_commands_in_dml_commands110);
							ddl_commands();
							state._fsp--;

							}
							break;
						case 3 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:71:4: dml_commands
							{
							pushFollow(FOLLOW_dml_commands_in_dml_commands115);
							dml_commands();
							state._fsp--;

							}
							break;

					}

					}
					break;
				case 2 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:73:2: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dml_commands"



	// $ANTLR start "select"
	// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:75:1: select : SELECT ( ALL | col_list ) ( NEWLINE )? from ( NEWLINE )* ;
	public final void select() throws  {
		try {
			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:76:2: ( SELECT ( ALL | col_list ) ( NEWLINE )? from ( NEWLINE )* )
			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:76:4: SELECT ( ALL | col_list ) ( NEWLINE )? from ( NEWLINE )*
			{
			match(input,SELECT,FOLLOW_SELECT_in_select132); 
			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:76:11: ( ALL | col_list )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==ALL) ) {
				alt5=1;
			}
			else if ( (LA5_0==AVERAGE||LA5_0==COUNT||LA5_0==FROM||LA5_0==ID||(LA5_0 >= MAX && LA5_0 <= NEWLINE)) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:76:13: ALL
					{
					match(input,ALL,FOLLOW_ALL_in_select136); 
					 programa_stack.peek().select_columns.add("69"); 
					}
					break;
				case 2 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:77:4: col_list
					{
					pushFollow(FOLLOW_col_list_in_select143);
					col_list();
					state._fsp--;

					}
					break;

			}

			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:77:15: ( NEWLINE )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==NEWLINE) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:77:15: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_select147); 
					}
					break;

			}

			pushFollow(FOLLOW_from_in_select150);
			from();
			state._fsp--;

			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:77:29: ( NEWLINE )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==NEWLINE) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:77:29: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_select152); 
					}
					break;

				default :
					break loop7;
				}
			}


					if (!programa_stack.peek().tmp.equals("0") && !programa_stack.peek().tmp.equals("1")) {
						programa_stack.peek().tmp = "-1";
					}
					System.out.println("Select query...");
					System.out.print("Columns: ");
					System.out.println(programa_stack.peek().select_columns);
					System.out.print("Tables: ");
					System.out.println(programa_stack.peek().select_tables);
					System.out.print("Condition: ");
					System.out.println(programa_stack.peek().condition);
					System.out.print("Grouping by: ");
					System.out.println(programa_stack.peek().column);
					System.out.print("XML/JSON: ");
					System.out.println(programa_stack.peek().tmp);
				
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "select"



	// $ANTLR start "col_list"
	// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:96:1: col_list : ( ( ID | agg_funct ) col_list |);
	public final void col_list() throws  {
		Token ID1=null;

		try {
			// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:97:2: ( ( ID | agg_funct ) col_list |)
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==AVERAGE||LA9_0==COUNT||LA9_0==ID||(LA9_0 >= MAX && LA9_0 <= MIN)) ) {
				alt9=1;
			}
			else if ( (LA9_0==FROM||LA9_0==NEWLINE) ) {
				alt9=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}

			switch (alt9) {
				case 1 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:97:4: ( ID | agg_funct ) col_list
					{
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:97:4: ( ID | agg_funct )
					int alt8=2;
					int LA8_0 = input.LA(1);
					if ( (LA8_0==ID) ) {
						alt8=1;
					}
					else if ( (LA8_0==AVERAGE||LA8_0==COUNT||(LA8_0 >= MAX && LA8_0 <= MIN)) ) {
						alt8=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 8, 0, input);
						throw nvae;
					}

					switch (alt8) {
						case 1 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:97:6: ID
							{
							ID1=(Token)match(input,ID,FOLLOW_ID_in_col_list170); 
							 
								 	programa_stack.peek().select_columns.add("-1"); 
								 	programa_stack.peek().select_columns.add((ID1!=null?ID1.getText():null));
								 
							}
							break;
						case 2 :
							// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:102:4: agg_funct
							{
							pushFollow(FOLLOW_agg_funct_in_col_list181);
							agg_funct();
							state._fsp--;

							}
							break;

					}

					pushFollow(FOLLOW_col_list_in_col_list185);
					col_list();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:104:2: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "col_list"



	// $ANTLR start "from"
	// /home/hector/Dropbox/TEC/Bases de Datos/Proyecto 1/urSQL.g:106:1: from : FROM ( ID | join_st ) ( NEWLINE )? ( where )? ( NEWLINE )? ( group )? ( NEWLINE )? ( for_JSON_XML )? ;
	public final void from() throws  {
		Token ID2=null;
